Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- With Zope 2.7.1 and later selected attendees was lost when creating meetings.
  (#1483)
- Made the creator of an event automatically confirmed.
- Made notification on event creation automatic.
- The organizer doesn't need to approve his own meeting request.
- Confirmation of events now is done directly on all
  attendees calendars, and not via the organizing calendar.
- New events are not set to dirty.
- A KeyError 'id' when running the installer was fixed.
- The document link was lost when editing the document.
- You can no longer remove the organizer from the attendees list.
- Deleting events now cancels them, even in the deleters calendar.
- Verifying cancellations no longer sends new events to verify.
- Removing an attendee now sends a cancel to the attendee.
- The organizer is now always a participant (even if it is an event).
- Adding attendees now automatically sends a notification.
- Modifying the event now automatically sends a notification.
- The confirmation options are now radio buttons instead of a select list.
- You can now only modify and delete events via the organizers calendar.
- searchCalendars now only returns users if they have a calendar.
- The meeting creation form no longer loses the to and from times when
  you search for users.
- Some formatting errors in the pending events view was fixed.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-